welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:23: error: not found: type i
    setCouleurBrosse(tableauCouleur[i]);
                                    ^Array1:23: error: method tableauCouleur of type Array[java.awt.Color] does not take type parameters.
    setCouleurBrosse(tableauCouleur[i]);
                                   ^